# cmake-examples

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  azure-pipelines.yml  cmake_android_arm.bat  cmake_android_arm64.bat  covertity_cmake_build.bat  covertiy.bat  pclint_cmake_build.bat  pclint_config.bat
exampleLibBoostFooer/: CMakeLists.txt  README.md  boostFooer.cpp
exampleLibFoo/: README.md
exampleLibFooer/: CMakeLists.txt  README.md  booer.cpp
libBoostFooer/: CMakeLists.txt  README.md
libBoostFooer/cmake/: Config.cmake.in
libBoostFooer/src/boostFooer/: BoostFooer.cpp  BoostFooer.hpp
libCppCheckerDemo/: CMakeLists.txt
libCppCheckerDemo/src/: ClientScene.cpp  WorldClient.cpp  WorldClient.h  nulldemo.cpp  nulldemo2.cpp  pclintdemo.cpp
libFoo/: CMakeLists.txt  README.md
libFooer/: CMakeLists.txt  README.md
libFooer/cmake/: Config.cmake.in  fooer_config.hpp.in
libFooer/src/fooer/: Fooer.cpp  Fooer.hpp
