cmake_minimum_required(VERSION 3.0)

project(cmake-examples)

# Monolithic version
add_subdirectory(libFoo)
add_subdirectory(libFooer)
# add_subdirectory(libBoostFooer)
add_subdirectory(exampleLibFoo)
add_subdirectory(exampleLibFooer)
# add_subdirectory(exampleLibBoostFooer)
add_subdirectory(libCppCheckerDemo)
